[package]
name = "bitcoin-node"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = ["rand-std", "serde"] }
bitcoinkernel = "0.0.16"
clap = { version = "4.5.29", features = ["derive"] }
dns-lookup = "2.0.4"
env_logger = "0.11.6"
log = "0.4.25"
redb = "2.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
